syntax = "proto3";

import "google/protobuf/duration.proto";
import "google/protobuf/timestamp.proto";
package coresamples_service;

option go_package = "./proto;coresamples_service";

service PanelService{
  rpc CreatePanel(CreatePanelRequest) returns (Panel){}
}

message GetAllPanels{
  int32 panel_id = 1;
}

message PanelInfo{
  int32 panel_id = 1;
  string panel_name = 2;
}

message allPanelInfo{
  repeated PanelInfo data = 1;
}

message CreatePanelRequest{
  string panel_name = 1;
  string panel_display_name = 2;
  string panel_code = 3;
  string category = 4;
  string description = 5;
  string orderable_test_name = 6;
  bool isActive = 7;
}

message Panel{
  int32 panel_id = 1;
  string panel_name = 2;
  string panel_display_name = 3;
  string panel_code = 4;
  string category = 5;
  string description = 6;
  string orderable_test_name = 7;
  bool isActive = 8;
  string created_time = 9;
  string updated_time = 10;
}